[gd_scene load_steps=3 format=3 uid="uid://d1e2f3g4h5i6"]

[ext_resource type="Script" path="res://src/ui/screens/main_menu.gd" id="1_main_menu"]
[ext_resource type="PackedScene" uid="uid://e1f2g3h4i5j6" path="res://src/ui/screens/settings_screen.tscn" id="2_settings_screen"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_main_menu")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Culinary Kaiju Chef"
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="SettingsButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="SettingsScreen" parent="." instance=ExtResource("2_settings_screen")]
visible = false